workloads/hello.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hello
  labels:
    app: front
    component: frontend
    domain: demo
  name: front
spec:
  ports:
  - port: 8484
    protocol: TCP
    targetPort: 8484
  selector:
    app: front
    component: frontend
    domain: demo
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  namespace: hello
  labels:
    app: back
    component: backend
    domain: demo
  name: back
spec:
  ports:
  - port: 8485
    protocol: TCP
    targetPort: 8485
  selector:
    app: back
    component: backend
    domain: demo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello
  labels:
    component: frontend
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
      component: frontend
      domain: demo
  template:
    metadata:
      namespace: hello
      labels:
        app: front
        component: frontend
        domain: demo
    spec:
      containers:
      - env:
        - name: HELLO_NAME
          value: hello
        - name: HELLO_PORT
          value: "8484"
        - name: HELLO_URL
          value: hello-back-svc:8485/hello
        image: nocquidant/go-hello
        livenessProbe:
          httpGet:
            path: /health
            port: 8484
        name: front
        ports:
        - containerPort: 8484
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 200m
            memory: 50Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello
  labels:
    component: backend
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
      component: backend
      domain: demo
  template:
    metadata:
      namespace: hello
      labels:
        app: back
        component: backend
        domain: demo
    spec:
      containers:
      - env:
        - name: HELLO_NAME
          value: hello-back
        - name: HELLO_PORT
          value: "8485"
        image: nocquidant/go-hello
        livenessProbe:
          httpGet:
            path: /health
            port: 8485
        name: back
        ports:
        - containerPort: 8485
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
