workloads/hello.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: hello-front
  namespace: hello
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-front
          servicePort: 8484
        path: /front(/|$)(.*)
